--- a/cfp/templates/cfp/_proposal_details.html
+++ b/cfp/templates/cfp/_proposal_details.html
@@ -1,42 +1,48 @@
-<h3>[{{ proposal.proposal_id }}] {{ proposal.full_title }}</h3>
-<hr />
+<div class="card">
+  <div class="card-header">Basic information</div>
+  <div class="card-body">
+    <h3>[{{ proposal.proposal_id }}] {{ proposal.full_title }}</h3>
+    {% if not proposal.session_type == 'other' %}
+      <hr>
+      <div>This is a proposal for a {{ proposal.session_type }}.</div>
+    {% endif %}
+  </div>
+</div>
 
-{% if not proposal.session_type == 'other' %}
-<div>This is a proposal for a {{ proposal.session_type }}.</div>
-<hr />
-{% endif %}
+<div class="card">
+  <div class="card-header">Proposal details</div>
+  <div class="card-body">
 
-<h4>{{ form.description.label }}</h4>
-<div>{{ proposal.description|linebreaks }}</div>
-<hr />
+    <h4>{{ form.description.label }}</h4>
+    <div>{{ proposal.description|linebreaks }}</div>
+    <hr>
+    <h4>{{ form.outline.label }}</h4>
+    <div>{{ proposal.outline|linebreaks }}</div>
 
-<h4>{{ form.outline.label }}</h4>
-<div>{{ proposal.outline|linebreaks }}</div>
-<hr />
+    {% if proposal.aimed_at_new_programmers or proposal.aimed_at_teachers or proposal.aimed_at_data_scientists or proposal.would_like_mentor or proposal.would_like_longer_slot %}
+      <hr>
+    {% endif %}
 
-<ul>
-  {% if proposal.aimed_at_new_programmers %}
-  <li>This talk is suitable for new programmers.</li>
-  {% endif %}
+    <ul>
+      {% if proposal.aimed_at_new_programmers %}
+      <li>This talk is suitable for new programmers.</li>
+      {% endif %}
 
-  {% if proposal.aimed_at_teachers %}
-  <li>This talk is suitable for teachers.</li>
-  {% endif %}
+      {% if proposal.aimed_at_teachers %}
+      <li>This talk is suitable for teachers.</li>
+      {% endif %}
 
-  {% if proposal.aimed_at_data_scientists %}
-  <li>This talk is suitable for data scientists.</li>
-  {% endif %}
+      {% if proposal.aimed_at_data_scientists %}
+      <li>This talk is suitable for data scientists.</li>
+      {% endif %}
 
-  {% if proposal.would_like_mentor %}
-  <li>You have requested assistance from a mentor.</li>
-  {% endif %}
+      {% if proposal.would_like_mentor %}
+      <li>You have requested assistance from a mentor.</li>
+      {% endif %}
 
-  {% if proposal.would_like_longer_slot %}
-  <li>You have requested a longer talk slot if available.</li>
-  {% endif %}
-</ul>
-
-{% if proposal.aimed_at_new_programmers or proposal.aimed_at_teachers or proposal.aimed_at_data_scientists or proposal.would_like_mentor or proposal.would_like_longer_slot %}
-<hr />
-{% endif %}
-
+      {% if proposal.would_like_longer_slot %}
+      <li>You have requested a longer talk slot if available.</li>
+      {% endif %}
+    </ul>
+  </div>
+</div>
