--- a/cfp/templates/cfp/proposal_edit.html
+++ b/cfp/templates/cfp/proposal_edit.html
@@ -2,9 +2,8 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-lg-8 offset-lg-2 col-sm-12">
     <h1>Update your proposal</h1>
-    <hr />
     {% include './_proposal_form.html' %}
   </div>
 </div>
