--- a/ironcage/templates/ironcage/index.html
+++ b/ironcage/templates/ironcage/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% if request.user.is_authenticated %}
-<p>Hello, {{ request.user.name }}</p>
+  <p>Hello, {{ request.user.name }}</p>
 {% endif %}
 
 <p>Welcome to the PyCon UK 2018 conference registration office.</p>
@@ -10,42 +10,61 @@
 <p>The conference takes place at <a href="http://2018.pyconuk.org/venue/">Cardiff City Hall</a> from Saturday 15th to Wednesday 19th September.  You can find out more about the conference <a href="https://2018.pyconuk.org/">on our website</a>.</p>
 
 {% if ticket %}
-<p>You have a ticket for {{ ticket.days_sentence }}.</p>
+  <p>You have a ticket for {{ ticket.days_sentence }}.</p>
 {% endif %}
 
 <p>Here, you can:</p>
 <ul>
-{% if ticket %}
-<li><a href="{% url 'tickets:ticket' ticket.ticket_id %}">View your conference ticket</a></li>
-<li><a href="{% url 'accounts:profile' %}">Update your profile</a></li>
-{% endif %}
+  {% if ticket %}
+    <li><a href="{% url 'tickets:ticket' ticket.ticket_id %}">View your conference ticket</a></li>
+    <li><a href="{% url 'accounts:profile' %}">Update your profile</a></li>
+  {% endif %}
 
-{% if orders|length == 0 %}
-{% if ticket_sales_open %}
-<li><a href="{% url 'tickets:new_order' %}">Order conference tickets</a></li>
-{% endif %}
-{% elif orders|length == 1 %}
-<li><a href="{% url 'orders:order' orders.0.order_id %}">View your order</a></li>
-{% if ticket_sales_open %}
-<li><a href="{% url 'tickets:new_order' %}">Order more conference tickets</a></li>
-{% endif %}
-{% else %}
-<li>View your orders:</li>
-<ul>
-  {% for order in orders %}
-  <li><a href="{% url 'orders:order' order.order_id %}">Order {{ order.order_id }}</a> ({{ order.brief_summary }})</li>
-  {% endfor %}
-</ul>
-{% if ticket_sales_open %}
-<li><a href="{% url 'tickets:new_order' %}">Order more conference tickets</a></li>
-{% endif %}
-{% endif %}
+  {% if orders|length == 0 %}
+    {% if ticket_sales_open %}
+      <li><a href="{% url 'tickets:new_order' %}">Order conference tickets</a></li>
+    {% endif %}
+  {% elif orders|length == 1 %}
+    <li><a href="{% url 'orders:order' orders.0.order_id %}">View your order</a></li>
+    {% if ticket_sales_open %}
+      <li><a href="{% url 'tickets:new_order' %}">Order more conference tickets</a></li>
+    {% endif %}
+  {% else %}
+    <li>View your orders:</li>
+    <ul>
+      {% for order in orders %}
+        <li><a href="{% url 'orders:order' order.order_id %}">Order {{ order.order_id }}</a> ({{ order.brief_summary }})</li>
+      {% endfor %}
+    </ul>
+    {% if ticket_sales_open %}
+      <li><a href="{% url 'tickets:new_order' %}">Order more conference tickets</a></li>
+    {% endif %}
+  {% endif %}
+
+  {% if proposals|length == 0 %}
+    {% if cfp_open %}
+      <li><a href="{% url 'cfp:new_proposal' %}">Make a proposal to our Call for Participation</a></li>
+    {% endif %}
+  {% elif proposals|length == 1 %}
+    <li><a href="{% url 'cfp:proposal' proposals.0.proposal_id %}">View your proposal to our Call for Participation</a> ({{ proposals.0.title }})</li>
+    {% if cfp_open %}
+      <li><a href="{% url 'cfp:new_proposal' %}">Make another proposal to our Call for Participation</a></li>
+    {% endif %}
+  {% else %}
+    <li>View your proposals to our Call for Participation</li>
+    <ul>
+      {% for proposal in proposals %}
+      <li><a href="{% url 'cfp:proposal' proposal.proposal_id %}">{{ proposal.title }}</a></li>
+      {% endfor %}
+    </ul>
+    <li><a href="{% url 'cfp:new_proposal' %}">Make another proposal to our Call for Participation</a></li>
+  {% endif %}
 </ul>
 
 {% if ticket %}
-<p>We look forward to seeing you in Cardiff!</p>
+  <p>We look forward to seeing you in Cardiff!</p>
 {% else %}
-<p>We hope to see you in Cardiff!</p>
+  <p>We hope to see you in Cardiff!</p>
 {% endif %}
 
 <p>~ The PyCon UK Committee</p>
