--- a/ironcage/templates/ironcage/index.html
+++ b/ironcage/templates/ironcage/index.html
@@ -63,6 +63,14 @@
   {% endif %}
 </ul>
 
+{% if grant_application %}
+    <li><a href="{% url 'grants:application' grant_application.application_id %}">View your application for financial assistance</a></li>
+{% else %}
+    {% if grant_applications_open %}
+        <li><a href="{% url 'grants:new_application' %}">Apply for financial assistance</a></li>
+    {% endif %}
+{% endif %}
+
 {% if ticket %}
   <p>We look forward to seeing you in Cardiff!</p>
 {% else %}
